--- a/flask2/data/Data Exploring.ipynb
+++ b/flask2/data/Data Exploring.ipynb
@@ -2288,9 +2288,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gazel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "gazel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2302,7 +2302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
