--- a/flask2/data/eval_study1_fixation.ipynb
+++ b/flask2/data/eval_study1_fixation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,31 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chunk_filter_data(X,Y,chunk_size,train=False):\n",
-    "    inter_val = chunk_size\n",
-    "    if train == True:\n",
-    "        inter_val = 1\n",
+    "def chunk_filter_data(X,Y,chunk_size,train=False,stride=1):\n",
     "    X_out = []\n",
     "    Y_out = []\n",
-    "    for i in range(0,len(X),inter_val):\n",
+    "    for i in range(0,len(X),stride):\n",
     "        x = X[i:i+chunk_size]\n",
     "        y = Y[i:i+chunk_size]\n",
-    "        if (np.all(y == y[0])) == False:\n",
-    "            continue\n",
     "        if x.shape[0] != chunk_size:\n",
     "            continue\n",
-    "        X_out.append(x.flatten())\n",
-    "        Y_out.append(y[0])\n",
+    "        std = np.std(x,axis=0).shape\n",
+    "        fvec = x.flatten()\n",
+    "#         fvec = std\n",
+    "        if train:\n",
+    "            mean = np.mean(y)\n",
+    "            if mean > 0.5:\n",
+    "                Y_out.append(1)\n",
+    "                X_out.append(fvec)\n",
+    "            elif mean < 0.5:\n",
+    "                Y_out.append(0)\n",
+    "                X_out.append(fvec)\n",
+    "        else:\n",
+    "            if (np.all(y == y[0])) == False:\n",
+    "                continue\n",
+    "            Y_out.append(y[0])\n",
+    "            X_out.append(fvec)\n",
     "    return np.array(X_out), np.array(Y_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -91,50 +100,50 @@
      "output_type": "stream",
      "text": [
       "Participant 0\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7764705882352941\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.7727272727272727\n",
       "Participant 1\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7647058823529411\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.7366522366522367\n",
       "Participant 2\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.8\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.7655122655122655\n",
       "Participant 3\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.6470588235294118\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.6536796536796536\n",
       "Participant 4\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7176470588235294\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.759018759018759\n",
       "Participant 5\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.6941176470588235\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.6428571428571429\n",
       "Participant 6\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.6352941176470588\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.6572871572871573\n",
       "Participant 7\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7529411764705882\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.7987012987012987\n",
       "Participant 8\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7294117647058823\n",
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.7958152958152959\n",
       "Participant 9\n",
-      "\t Train shape: (6840, 234) (6840, 1)\n",
-      "\t Test shape: (85, 234) (85, 1)\n",
-      "\t Accuracy 0.7294117647058823\n"
+      "\t Train shape: (12586, 390) (12586,)\n",
+      "\t Test shape: (1386, 390) (1386,)\n",
+      "\t Accuracy 0.670995670995671\n"
      ]
     }
    ],
    "source": [
-    "chunk_size = 9\n",
+    "chunk_size = 15\n",
     "\n",
     "Y_OUT, Y_GT = None, None\n",
     "acc = []\n",
@@ -146,6 +155,7 @@
     "    X_train, Y_train, X_test, Y_test = None, None, None, None\n",
     "    \n",
     "    for j in range(len(g_id)):\n",
+    "        \n",
     "        df_extract = df_group.get_group(g_id[j])\n",
     "        x = np.array(df_extract[feat].tolist())\n",
     "        y = np.array(df_extract[\"fixation\"].tolist())\n",
@@ -167,7 +177,7 @@
     "    X_test = np.nan_to_num(X_test)\n",
     "    \n",
     "    X_train, Y_train = chunk_filter_data(X_train,Y_train,chunk_size,train=True)\n",
-    "    X_test, Y_test = chunk_filter_data(X_test,Y_test,chunk_size)\n",
+    "    X_test, Y_test = chunk_filter_data(X_test,Y_test,chunk_size,train=True)\n",
     "\n",
     "    print(\"\\t Train shape:\",X_train.shape,Y_train.shape)\n",
     "    print(\"\\t Test shape:\",X_test.shape,Y_test.shape)\n",
@@ -176,7 +186,7 @@
     "    X_train = min_max_scaler_x.fit_transform(X_train)\n",
     "    X_test = min_max_scaler_x.transform(X_test)\n",
     "    \n",
-    "#     clf = ExtraTreesClassifier(n_estimators=1000)\n",
+    "#     clf = ExtraTreesClassifier(n_estimators=100,class_weight='balanced')\n",
     "    clf = MLPClassifier()\n",
     "    \n",
     "    clf.fit(X_train,Y_train)\n",
@@ -196,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.7247058823529412 SD 0.05079301916452448\n"
+      "Accuracy 0.7253246753246754 SD 0.05915518372248136\n"
      ]
     }
    ],
@@ -213,10 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline acc 0.5721500721500722\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Baseline acc\",np.mean(Y_test))"
+   ]
   },
   {
    "cell_type": "code",
