almost done with music demo

--- a/flask2/data/GAZEL User Studies Data Mangling.ipynb
+++ b/flask2/data/GAZEL User Studies Data Mangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "painful-archives",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "reported-guitar",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "black-offering",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "downtown-independence",
    "metadata": {
     "scrolled": true
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "optimum-frame",
    "metadata": {
     "scrolled": true
@@ -227,9 +227,9 @@
     "####### Find index of first motion, then trim each gazepred and embedding history there. \n",
     "            # Also remove the first few samples to get rid of reaction time\n",
     "firstIndices = list(map(getFirstActivity, GAZELdata['Gestpreds Hist']))\n",
-    "for col in ['Gazepreds Hist', 'Embeddings Hist', 'Face Detection Hist']:\n",
+    "# for col in ['Gazepreds Hist', 'Embeddings Hist', 'Face Detection Hist']:\n",
     "#         GAZELdata[col] = list(map(lambda x: x[0][firstInd:(x[1]-1)], zip(GAZELdata[col],firstIndices)))\n",
-    "    GAZELdata[col] = list(map(lambda x: x[2:12], GAZELdata[col]))\n",
+    "#     GAZELdata[col] = list(map(lambda x: x[2:12], GAZELdata[col]))\n",
     "\n",
     "# #### Remove samples where head is not visible.\n",
     "# indices = [np.argwhere(nparr(x) < .9) for x in GAZELdata['Face Detection Hist']]\n",
@@ -237,7 +237,8 @@
     "#         GAZELdata[col] = list(map((lambda x: np.delete(x[0], x[1],axis=0)), zip(GAZELdata[col],indices)))        \n",
     "        \n",
     "# Then remove all rows where the length is too short (1 sample is about 100 ms)\n",
-    "GAZELdata = GAZELdata.loc[[len(x) ==10 for x in GAZELdata['Gazepreds Hist']]]\n",
+    "# GAZELdata = GAZELdata.loc[[len(x) == 10 for x in GAZELdata['Gazepreds Hist']]]\n",
+    "GAZELdata = GAZELdata.loc[[len(x) >12 for x in GAZELdata['Gazepreds Hist']]]\n",
     "\n",
     "\n",
     "\n",
@@ -269,6 +270,66 @@
     "print(\"After filtering, GAZELdata has length: \", len(GAZELdata))\n",
     "# # Plot one of the eye histories for fun\n",
     "# plt.plot(GAZELdata['Gazepreds Hist'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "increasing-framing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GAZELdata['Raw Gazepreds Hist']\n",
+    "# GAZELdata['Gaze Target XY']\n",
+    "tmp = [] \n",
+    "for i in GAZELdata['Gaze Target XY'].keys():\n",
+    "    tmp.append([np.array(x) - GAZELdata['Gaze Target XY'][i] for x in GAZELdata['Raw Gazepreds Hist'][i]])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "suspended-teacher",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errs = [sum(x)/len(x) for x in tmp]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "strategic-cisco",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.647271381288732"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newErrs = np.array(errs)\n",
+    "xerr = (newErrs[:,0]*6.4)\n",
+    "yerr = (newErrs[:,1]*12.8)\n",
+    "\n",
+    "np.mean((xerr**2 + yerr**2)**.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acting-transcript",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std((xerr**2 + yerr**2)**.5)"
    ]
   },
   {
