--- a/flask2/data/eval_study2_gaze.ipynb
+++ b/flask2/data/eval_study2_gaze.ipynb
@@ -3,14 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.svm import SVR\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn import preprocessing\n",
@@ -21,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slide_window(A, win_size, stride, padding = None):\n",
@@ -68,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_pickle(\"./gazeldata.pkl\")"
@@ -79,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "feat = \"Embeddings Hist\"\n",
@@ -91,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_group = df.groupby([control])[\"Gaze Target XY\",feat]"
@@ -102,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g_id = list(df_group.groups.keys())"
@@ -112,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -122,49 +111,51 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "\t X Error 0.5796744210806367 SD 0.398608698313283\n",
-      "\t Y Error 2.4380584508916896 SD 1.7064247556168681\n",
-      "\t Total Eucilidean Error 2.585481322429523 SD 1.6328539790013612\n",
+      "\t X Error 0.5851512293297926 SD 0.39303941004699966\n",
+      "\t Y Error 2.463375012325794 SD 1.9106847301074092\n",
+      "\t Total Eucilidean Error 2.6111137502385375 SD 1.8433392285654628\n",
       "2\n",
-      "\t X Error 0.5632721142755709 SD 0.38869776628026803\n",
-      "\t Y Error 2.305115499955649 SD 1.6718031994532834\n",
-      "\t Total Eucilidean Error 2.4523370637396407 SD 1.600902170614612\n",
+      "\t X Error 0.5518889821441925 SD 0.383981711464237\n",
+      "\t Y Error 2.3507555185530875 SD 1.871933928432054\n",
+      "\t Total Eucilidean Error 2.493250376659022 SD 1.8071840257880993\n",
       "3\n",
-      "\t X Error 0.5490782835004254 SD 0.37215368838845925\n",
-      "\t Y Error 2.09814450063585 SD 1.6023249171663037\n",
-      "\t Total Eucilidean Error 2.2475034466757577 SD 1.5356982360131775\n",
+      "\t X Error 0.5187315467093893 SD 0.3762814674137409\n",
+      "\t Y Error 2.185742766331993 SD 1.7541237274650732\n",
+      "\t Total Eucilidean Error 2.323888019639583 SD 1.6925235963716463\n",
       "4\n",
-      "\t X Error 0.5293741460385081 SD 0.3631216422275669\n",
-      "\t Y Error 1.9213194925028796 SD 1.5197086522638952\n",
-      "\t Total Eucilidean Error 2.0761013131165966 SD 1.450131246219063\n",
+      "\t X Error 0.488976190157724 SD 0.36187415725025185\n",
+      "\t Y Error 2.044100865868727 SD 1.6615608076122708\n",
+      "\t Total Eucilidean Error 2.1783973165502166 SD 1.6011771977866678\n",
       "5\n",
-      "\t X Error 0.5149370952000742 SD 0.3586378231543496\n",
-      "\t Y Error 1.8374653535622394 SD 1.4728017267608264\n",
-      "\t Total Eucilidean Error 1.9925852129325712 SD 1.4031426589280667\n",
+      "\t X Error 0.4846662010414216 SD 0.3567255578610415\n",
+      "\t Y Error 2.0213771626933124 SD 1.6105270660165807\n",
+      "\t Total Eucilidean Error 2.1521627596085007 SD 1.5524538545308073\n",
       "6\n",
-      "\t X Error 0.5158555585129995 SD 0.3480964766928352\n",
-      "\t Y Error 1.7125181439091521 SD 1.3918286523454253\n",
-      "\t Total Eucilidean Error 1.8711571145899923 SD 1.3251243555084535\n",
+      "\t X Error 0.46939469096245884 SD 0.3551139873434418\n",
+      "\t Y Error 1.825201174158733 SD 1.465486406744136\n",
+      "\t Total Eucilidean Error 1.9586721605199329 SD 1.4103369888140664\n",
       "7\n",
-      "\t X Error 0.5140214710318523 SD 0.3512536349873126\n",
-      "\t Y Error 1.6991940377961157 SD 1.3683906096195675\n",
-      "\t Total Eucilidean Error 1.855940488756079 SD 1.30492732730458\n",
+      "\t X Error 0.4658814007350355 SD 0.35320609507921225\n",
+      "\t Y Error 1.8269384341935158 SD 1.4342993177637187\n",
+      "\t Total Eucilidean Error 1.9569809290280946 SD 1.3809215197987184\n",
       "8\n",
-      "\t X Error 0.5076617868866997 SD 0.3482516235910071\n",
-      "\t Y Error 1.6823777836926623 SD 1.3490178462293294\n",
-      "\t Total Eucilidean Error 1.8381157169765163 SD 1.2847468430436129\n",
+      "\t X Error 0.46439086390575784 SD 0.3532481673766996\n",
+      "\t Y Error 1.8050354385312213 SD 1.4214234663074075\n",
+      "\t Total Eucilidean Error 1.9354960891694206 SD 1.3685377729412396\n",
       "9\n",
-      "\t X Error 0.5026279833200248 SD 0.34424385293607584\n",
-      "\t Y Error 1.6521707035755446 SD 1.3503202133699266\n",
-      "\t Total Eucilidean Error 1.8088756962861594 SD 1.2853560392648486\n",
+      "\t X Error 0.45859708913488556 SD 0.35388514522500913\n",
+      "\t Y Error 1.7775539453701916 SD 1.3906494104954321\n",
+      "\t Total Eucilidean Error 1.907401425143853 SD 1.338271123930253\n",
       "10\n",
-      "\t X Error 0.4967623103540066 SD 0.34342911124726033\n",
-      "\t Y Error 1.6364986247892774 SD 1.3220472617378487\n",
-      "\t Total Eucilidean Error 1.7907573696747425 SD 1.2585074896883537\n"
+      "\t X Error 0.4518775862286495 SD 0.34876164367656837\n",
+      "\t Y Error 1.7474047245616178 SD 1.3796034319243218\n",
+      "\t Total Eucilidean Error 1.8773035532260733 SD 1.3260046405945163\n"
      ]
     }
    ],
    "source": [
+    "gazecoordsAndGrid = []\n",
+    "\n",
     "for n_windows in range(1,11):\n",
     "\n",
     "    feature_len= 26\n",
@@ -181,6 +172,7 @@
     "            df_extract = df_group.get_group(g_id[j])\n",
     "            x = np.array(df_extract[feat].tolist())\n",
     "            y = np.array(df_extract[\"Gaze Target XY\"].tolist())\n",
+    "            \n",
     "            if g_id[i] == g_id[j]:\n",
     "                X_test = x\n",
     "                Y_test = y\n",
@@ -205,11 +197,21 @@
     "        X_train = min_max_scaler_x.fit_transform(X_train)\n",
     "        X_test = min_max_scaler_x.transform(X_test)\n",
     "\n",
-    "        clf = ExtraTreesRegressor(n_estimators=100)\n",
+    "#         clf = ExtraTreesRegressor(n_estimators=100)\n",
+    "        \n",
+    "        clf_x = SVR(kernel='poly')\n",
+    "        clf_x.fit(X_train,Y_train[:,0])\n",
+    "        \n",
+    "        clf_y = SVR(kernel='poly')\n",
+    "        clf_y.fit(X_train,Y_train[:,1])\n",
     "\n",
-    "        clf.fit(X_train,Y_train)\n",
+    "#         Y_pred = clf.predict(X_test)\n",
     "\n",
-    "        Y_pred = clf.predict(X_test)\n",
+    "        Y_pred_x = clf_x.predict(X_test)\n",
+    "        Y_pred_y = clf_y.predict(X_test)\n",
+    "        Y_pred = np.zeros_like(Y_test)\n",
+    "        Y_pred[:,0] = Y_pred_x\n",
+    "        Y_pred[:,1] = Y_pred_y\n",
     "\n",
     "\n",
     "        if Y_OUT is None:\n",
@@ -253,36 +255,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -379,9 +373,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
